# Vince

./: CMakeLists.txt  readme.md
include/QtCore/: qconfig.h
include/QtCore/6.7.2/QtCore/private/: qconfig_p.h  qtcore-config_p.h
include/QtGui/: qtgui-config.h
lib/: Qt6Core.lib  Qt6Gui.lib  Qt6Widgets.lib
src/: ShortcutsManager.cpp  ShortcutsManager.h  main.cpp  webview.cpp  webview.h
